--- a/sample_keyprovider/Cargo.toml
+++ b/sample_keyprovider/Cargo.toml
@@ -12,7 +12,7 @@ prost = "0.8"
 futures = "0.3.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-aes-gcm = "0.9.2"
+aes-gcm = "0.10.1"
 base64 = "0.13.0"
 clap = "2"
 anyhow = "1.0"
@@ -24,6 +24,10 @@ openssl = { version = "0.10", optional = true }
 [build-dependencies]
 tonic-build = "0.5"
 shadow-rs = "0.5.25"
+
+[dev-dependencies]
+strum = "0.24.0"
+strum_macros = "0.24.0"
 
 [features]
 default = []
