--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -16,16 +16,16 @@ const_format.workspace = true
 env_logger.workspace = true
 lazy_static.workspace = true
 log.workspace = true
-prost = { version = "0.10.4", optional = true }
+prost = { workspace = true, optional = true }
 protobuf = { version = "3.1.0", optional = true }
 serde.workspace = true
 serde_json.workspace = true
-tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "rt", "sync", "signal"]}
-tonic = { version = "0.7.2", optional = true }
+tokio = { workspace = true, default-features = false, features = ["rt-multi-thread", "rt", "sync", "signal"]}
+tonic = { workspace = true, optional = true }
 ttrpc = { version = "0.7.1", features = ["async"], optional = true }
 
 [build-dependencies]
-tonic-build = { version = "0.7.2", optional = true }
+tonic-build = { workspace = true, optional = true }
 ttrpc-codegen = { version = "0.4.1", optional = true }
 
 [features]
