--- a/coco_keyprovider/Cargo.toml
+++ b/coco_keyprovider/Cargo.toml
@@ -9,25 +9,27 @@ edition = "2021"
 aes-gcm = "0.10.1"
 anyhow.workspace = true
 base64.workspace = true
+bumpalo.workspce = true
 clap = { version = "4.0.29", features = ["derive"] }
 ctr = "0.9.2"
 env_logger = "0.9.0"
 futures = "0.3.5"
 jwt-simple = "0.11.4"
 log.workspace = true
-prost = "0.8"
+prost.workspace = true
 rand = "0.8.4"
 reqwest = "0.11.14"
 serde.workspace = true
 serde_json.workspace = true
+smallvec.workspace = true
 strum.workspace = true
-tokio = { version = "1.0", features = ["fs", "rt-multi-thread"] }
-tonic = "0.5"
+tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
+tonic.workspace = true
 uuid = { version = "1.3.0", features = ["fast-rng", "v4"] }
 
 [build-dependencies]
 shadow-rs = "0.5.25"
-tonic-build = "0.5"
+tonic-build.workspace = true
 
 [dev-dependencies]
 rstest = "0.17.0"
