--- a/deps/crypto/Cargo.toml
+++ b/deps/crypto/Cargo.toml
@@ -10,10 +10,11 @@ aes-gcm = { version = "0.10.1", optional = true }
 anyhow.workspace = true
 base64.workspace = true
 kbs-types.workspace = true
-rsa = { version = "0.6.1" }
+rsa = "0.9.2"
 openssl = { version = "0.10", features = ["vendored"], optional = true}
 ctr = { version = "0.9.2", optional = true }
 zeroize.workspace = true
+smallvec.workspace = true
 strum.workspace = true
 rand = { version = "0.8.5" }
 sha2 = { version = "0.10" }
