--- a/kbc/Cargo.toml
+++ b/kbc/Cargo.toml
@@ -14,24 +14,24 @@ crypto = { path = "../deps/crypto", default-features = false }
 foreign-types = { version = "0.5.0", optional = true }
 kbs_protocol = { path = "../kbs_protocol", default-features = false, optional = true }
 log.workspace = true
-prost = { version = "0.11.0", optional = true }
+prost = { workspace = true, optional = true }
 resource_uri.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sev = { path = "../deps/sev", optional = true }
 strum.workspace = true
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"], optional = true }
-tonic = { version = "0.8.0", optional = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
+tonic = { workspace = true, optional = true }
 url.workspace = true
 uuid = { version = "1.1.2", features = ["serde", "v4"], optional = true }
 zeroize.workspace = true
 
 [dev-dependencies]
-tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 rstest = "0.16.0"
 
 [build-dependencies]
-tonic-build = { version = "0.8.0", optional = true }
+tonic-build = { workspace = true, optional = true }
 
 [features]
 default = ["sample_kbc", "rust-crypto"]
