--- a/kbs_protocol/Cargo.toml
+++ b/kbs_protocol/Cargo.toml
@@ -10,6 +10,7 @@ anyhow.workspace = true
 async-trait.workspace = true
 attester = { path = "../attester", default-features = false }
 base64.workspace = true
+bumpalo.workspce = true
 crypto = { path = "../deps/crypto", default-features = false }
 kbs-types.workspace = true
 log.workspace = true
